# Podvig2-48-files

./: build.gradle.kts  gradle.properties
.github/workflows/: build.yml
app/: build.gradle.kts  proguard-rules.pro
app/libs/arm64-v8a/: .gitkeep
app/src/: donate.h
app/src/main/: AndroidManifest.xml
app/src/main/assets/: pools.json
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/lottttto/miner/: MainActivity.kt  MainScreen.kt
app/src/main/java/com/lottttto/miner/components/: VerticalSlider.kt
app/src/main/java/com/lottttto/miner/di/: AppModule.kt
app/src/main/java/com/lottttto/miner/models/: CoinType.kt  MiningTask.kt  Wallet.kt
app/src/main/java/com/lottttto/miner/navigation/: NavGraph.kt
app/src/main/java/com/lottttto/miner/repositories/: MiningRepository.kt  PoolRepository.kt
app/src/main/java/com/lottttto/miner/screens/: MainScreen.kt  WalletScreen.kt
app/src/main/java/com/lottttto/miner/screens/auth/: TermsScreen.kt
app/src/main/java/com/lottttto/miner/screens/main/: MainScreen.kt
app/src/main/java/com/lottttto/miner/screens/mining/: MiningScreen.kt
app/src/main/java/com/lottttto/miner/screens/screens/: MainScreen.kt
app/src/main/java/com/lottttto/miner/screens/settings/: AboutScreen.kt  MoneroMiningSettingsScreen.kt
app/src/main/java/com/lottttto/miner/screens/wallet/: WalletScreen.kt
app/src/main/java/com/lottttto/miner/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/lottttto/miner/utils/: NativeMinerLib.kt
app/src/main/java/com/lottttto/miner/viewmodels/: MainViewModel.kt  MiningPoolsViewModel.kt  WalletViewModel.kt
app/src/main/res/values/: strings.xml  themes.xml
